<resources>
    <string name="app_name">Shop SF</string>

    <!--    Login Screen-->
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_create_new_account">Create new account</string>
    <string name="btn_forgot_password">Forgot password</string>
    <string name="cb_remember_me">Remember me</string>
    <string name="btn_login">Login</string>

    <!--    Create new user screen-->
    <string name="tv_title_create_new_user">Create New Account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_account">Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="btn_create">Create</string>

    <!--    Forgot password screen-->
    <string name="tv_title_forgot_password">Forgot Password</string>
    <string name="btn_send">Send</string>
    <string name="btn_buy">Buy</string>

    <!--    Product List screen-->
    <string name="tv_title_list_screen">Product List</string>
    <string name="string_cart">Cart</string>
    <string name="string_payment">Payment</string>

</resources>