<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:splitMotionEvents="false"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:splitMotionEvents="false">

        <TextView
            android:id="@+id/tv_app_title"
            style="@style/TextTitle"
            android:layout_width="@dimen/_150sdp"
            android:background="@color/light_red"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_username"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:hint="@string/hint_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="15"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_password"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:hint="@string/hint_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_username"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="15"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create_new_account"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/btn_create_new_account"
            app:backgroundTint="@color/light_red"
            app:layout_constraintEnd_toEndOf="@id/container_password"
            app:layout_constraintStart_toStartOf="@id/container_password"
            app:layout_constraintTop_toBottomOf="@id/container_password" />

        <Button
            android:id="@+id/btn_forgot_password"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/btn_forgot_password"
            app:backgroundTint="@color/light_red"
            app:layout_constraintEnd_toEndOf="@id/btn_create_new_account"
            app:layout_constraintStart_toStartOf="@id/btn_create_new_account"
            app:layout_constraintTop_toBottomOf="@id/btn_create_new_account" />

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_remember_me"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password" />

        <Button
            android:id="@+id/btn_login"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            app:backgroundTint="@color/light_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_app_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_app_title"
            app:layout_constraintTop_toBottomOf="@id/btn_forgot_password"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>