<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateNewUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar_create_new_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways|scroll|snap"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/tv_title_create_new_user"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:splitMotionEvents="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/tv_create_title"
                style="@style/TextTitle"
                android:background="@color/light_red"
                android:text="@string/tv_title_create_new_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.12" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_full_name"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/hint_full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_create_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_full_name"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_account"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/hint_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_account"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_password_user"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/hint_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_account"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_create_new_user"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ems="15"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_email_user"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/hint_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_password_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_create_new_user"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ems="15"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_phone_number"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/hint_phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_email_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone_number"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_address"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/hint_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_create"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_create"
                app:backgroundTint="@color/light_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_create_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_create_title"
                app:layout_constraintTop_toBottomOf="@id/container_address"
                app:layout_constraintVertical_bias="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>