<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways|scroll|snap"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/tv_title_forgot_password"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:splitMotionEvents="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/TextTitle"
                android:background="@color/light_red"
                android:text="@string/tv_title_forgot_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_email_forgot"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/hint_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_forgot"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_saved_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_email_forgot"
                tools:text="test" />

            <Button
                android:id="@+id/btn_send"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/btn_send"
                app:backgroundTint="@color/light_red"
                app:layout_constraintEnd_toEndOf="@+id/tv_forgot_password"
                app:layout_constraintStart_toStartOf="@+id/tv_forgot_password"
                app:layout_constraintTop_toBottomOf="@id/tv_saved_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
